fix: enable blog section visibility on mobile devices
- Remove display:none rule for .colorlib-blogs on mobile
- Add blogs section to mobile padding styling for consistency

--- a/css/style.css
+++ b/css/style.css
@@ -386,15 +386,12 @@ body.offcanvas .colorlib-nav-toggle {
   .colorlib-profile,
   .colorlib-projects,
   .colorlib-education,
+  .colorlib-blogs,
   .colorlib-work,
   .colorlib-about,
   .colorlib-contact {
     padding-top: 1em;
     padding-bottom: 0.5em;
-  }
-
-  .colorlib-blogs {
-    display: none;
   }
 
   .profile-cards {
